--- a/MEGA motor/.vscode/launch.json
+++ b/MEGA motor/.vscode/launch.json
@@ -12,8 +12,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "/Users/naboo/Projects/Aqbotav3/MEGA motor/.pio/build/mega/firmware.elf",
-            "toolchainBinDir": "/Users/naboo/.platformio/packages/toolchain-atmelavr/bin",
+            "executable": "/Users/naboo/Projects/Aqbotav3/MEGA motor/.pio/build/esp32doit-devkit-v1/firmware.elf",
+            "toolchainBinDir": "/Users/naboo/.platformio/packages/toolchain-xtensa32/bin",
             "preLaunchTask": {
                 "type": "PlatformIO",
                 "task": "Pre-Debug"
@@ -24,8 +24,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/Users/naboo/Projects/Aqbotav3/MEGA motor/.pio/build/mega/firmware.elf",
-            "toolchainBinDir": "/Users/naboo/.platformio/packages/toolchain-atmelavr/bin",
+            "executable": "/Users/naboo/Projects/Aqbotav3/MEGA motor/.pio/build/esp32doit-devkit-v1/firmware.elf",
+            "toolchainBinDir": "/Users/naboo/.platformio/packages/toolchain-xtensa32/bin",
             "internalConsoleOptions": "openOnSessionStart"
         }
     ]
