--- a/MEGA motor/platformio.ini
+++ b/MEGA motor/platformio.ini
@@ -3,10 +3,17 @@
 ; framework = arduino
 ; board = teensy31
 
-[env:mega]
-platform = atmelavr
-framework = arduino
-board = megaatmega2560
+; [env:mega]
+; platform = atmelavr
+; framework = arduino
+; board = megaatmega2560
 
 ; upload_protocol = teensy-cli
 ; upload_port = /dev/linobase
+
+[env:esp32doit-devkit-v1]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+monitor_speed = 115200
+upload_port = /dev/linobase
